--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="btn-group">
-          <a href="cv.pdf" download class="btn">Download CV</a>
+          <a href="/assets/cv.pdf" download class="btn">Download CV</a>
           <a href="#contact" class="btn">Contact</a>
         </div>
       </div>
