--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
                 <img src="/assets/html.png" alt=""class="skill-icon">
               </div>
               <h3>HTML 5</h3>
-              <p>I have a foundational understanding of HTML5 and its role in structuring web pages. 
-                I am comfortable using basic HTML elements and semantic markup to create simple web pages. 
-                I am eager to learn more about advanced HTML5 features.</p>
+              <p>Foundational understanding about HTML5 and structuring web pages.</p>
             </div>
           </a>
         </div>
@@ -130,9 +128,7 @@
                 <img src="/assets/css.png" alt="" class="skill-icon">
               </div>
               <h3>CSS</h3>
-              <p>I have a basic understanding of CSS and its use in styling web pages.
-                I am familiar with fundamental CSS properties, selectors, and units.
-                I am currently exploring CSS frameworks like Bootstrap and Tailwind CSS to enhance my styling skills.</p>
+              <p>Basic understanding about CSS. I am currently exploring CSS frameworks like Bootstrap and Tailwind CSS to enhance my styling skills.</p>
             </div>
           </a>
         </div>
@@ -145,8 +141,7 @@
               </div>
               <h3>React JS</h3>
               <p>I am a beginner in React.js but have started learning the fundamentals of component-based architecture, props, and state management.
-                I am excited to explore React.js further and build interactive user interfaces.
-                I am actively working on projects to solidify my understanding of React.js concepts.</p>
+                I am excited to explore React.js further and build interactive user interfaces.</p>
             </div>
           </a>
         </div>
