--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             rows="10"
             placeholder="Enter Message"
           ></textarea>
-          <input type="submit" value="Send Message" class="btn" />
+          <input type="submit" value="Send Message" class="btn" onClick='clearField()'/>
         </div>
       </form>
     </section>
