--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
       <form action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="72e7021f-aa7a-4da3-9c3b-520f86442f17">
-        <div class="input-group" id='input-group'>
+        <div class="input-group">
           <div class="input-box">
             <input type="text" placeholder="Full Name" name="full_name" required />
             <input type="email" placeholder="Email" name="email" required />
@@ -202,7 +202,7 @@
           </div>
         </div>
 
-        <div class="input-group-2" id='input-group-2'>
+        <div class="input-group-2">
           <textarea
             name=""
             id=""
@@ -210,7 +210,7 @@
             rows="10"
             placeholder="Enter Message"
           ></textarea>
-          <input type="submit" value="Send Message" class="btn" onClick='clearField()'/>
+          <input type="submit" value="Send Message" class="btn"/>
         </div>
       </form>
     </section>
