--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 <img src="/assets/html.png" alt=""class="skill-icon">
               </div>
               <h3>HTML 5</h3>
-              <p>Foundational understanding about HTML5 and structuring web pages.</p>
+              <p>Foundational understanding of HTML5 and its role in structuring web pages. 
+                I am eager to learn more about advanced HTML5 features.</p>
             </div>
           </a>
         </div>
@@ -128,7 +129,8 @@
                 <img src="/assets/css.png" alt="" class="skill-icon">
               </div>
               <h3>CSS</h3>
-              <p>Basic understanding about CSS. I am currently exploring CSS frameworks like Bootstrap and Tailwind CSS to enhance my styling skills.</p>
+              <p>Basic understanding of CSS and its use in styling web pages.
+                I am currently exploring CSS frameworks like Bootstrap and Tailwind CSS to enhance my styling skills.</p>
             </div>
           </a>
         </div>
@@ -140,8 +142,8 @@
                 <img src="/assets/react.png" alt="" class="skill-icon">
               </div>
               <h3>React JS</h3>
-              <p>I am a beginner in React.js but have started learning the fundamentals of component-based architecture, props, and state management.
-                I am excited to explore React.js further and build interactive user interfaces.</p>
+              <p>I am a beginner in React.js but have started learning the fundamentals.
+                I am actively working on projects to solidify my understanding of React.js concepts.</p>
             </div>
           </a>
         </div>
@@ -206,11 +208,11 @@
           <textarea
             name=""
             id=""
-            cols="30"
+            cols="20"
             rows="10"
             placeholder="Enter Message"
           ></textarea>
-          <input type="submit" value="Send Message" class="btn"/>
+          <input type="submit" value="Send Message" class="btn" />
         </div>
       </form>
     </section>
