--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
@@ -27,11 +28,6 @@
       <div class="home-content">
         <h1>Hi, I'm <span>Raysan</span></h1>
         <h3 class="text-animation">I'm a <span></span></h3>
-        <p>
-          I'm a third-year Computer Science student with a passion for coding and creative design. 
-          My portfolio showcases my skills in frontend development, web design, and graphic design, 
-          along with my love for cycling and gaming.
-        </p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/raysan-perez-8602a7325/"
@@ -53,6 +49,66 @@
       </div>
       <div class="home-img">
         <img src="/assets/image.PNG" alt="" />
+      </div>
+    </section>
+
+    <section class="about" id="about">
+      <h2 class="heading">About <span>Me</span></h2>
+
+      <div class="about-container">
+        <div class="about-content">
+          <p>
+            I'm a third-year Computer Science student with a passion for coding and creative design.
+            My portfolio showcases my skills in frontend development, web design, and graphic design,
+            along with my love for cycling and gaming.
+          </p>
+        </div>
+
+        <div class="about-panel">
+          <input type="radio" name="slide" id="c1" checked>
+          <label for="c1" class="card">
+            <div class="row">
+              <div class="icon">
+                <div class="description">
+                </div>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide" id="c2" console.log("Page Loaded");>
+          <label for="c2" class="card">
+            <div class="row">
+              <div class="icon">
+                <div class="description">
+                  <h4>Akatsuki Vector</h4>
+                </div>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide" id="c3" >
+          <label for="c3" class="card">
+            <div class="row">
+              <div class="icon">
+                <div class="description">
+                  <h4>My Bike</h4>
+                </div>
+              </div>
+            </div>
+          </label>
+
+          <input type="radio" name="slide" id="c4" >
+          <label for="c4" class="card">
+            <div class="row">
+              <div class="icon">
+                <div class="description">
+                  <h4>My Love</h4>
+                </div>
+              </div>
+            </div>
+          </label>
+
+        </div>
       </div>
     </section>
 
