--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
       <ul class="list">
         <li>
-          <a href="#">About Me</a>
+          <a href="#about">About</a>
         </li>
 
         <li>
